--- a/public/contact.html
+++ b/public/contact.html
@@ -1,11 +1,11 @@
 <h1>Contact Me</h1>
-<p>Tel: +3232510535</p>
-<p>Email: matt@magelightdev.com</p>
+<p>Tel: +000123456</p>
+<p>Email: matt@email.com</p>
 <p>Address:</p>
 <p>
-    530 E McDowell Rd #107-450
+    1234 E Arizona Rd #1136
     <br>
-    Phoenix, Arizona 85004
+    Phoenix, Arizona 64112
     <br>
     United States
     <br>
